--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	},
 	"displayName": "FS AI Tools",
 	"description": "A bag of tools to clean flightplans and .cfg files",
-	"version": "1.0.10",
+	"version": "1.0.11",
+	"license": "",
 	"engines": {
 		"vscode": "^1.37.0"
 	},
@@ -17,6 +18,7 @@
 		"onCommand:extension.cleanAircraftCfg",
 		"onCommand:extension.cleanFlightplan",
 		"onCommand:extension.changeAircraftNumber",
+		"onCommand:extension.createAifpCfg",
 		"onCommand:extension.createFlightplanHeader",
 		"onCommand:extension.rebaseAircraftNumbers",
 		"onCommand:extension.renumberAddOnsCfg",
@@ -42,6 +44,12 @@
 				"title": "Change AC# Number",
 				"category": "FS AI Tools",
 				"when": "editorHasSelection && resourceFilename =~ /^((flightplans)|(aircraft)).*txt$/i"
+			},
+			{
+				"command": "extension.createAifpCfg",
+				"title": "Create aifp.cfg File",
+				"category": "FS AI Tools",
+				"when": "resourceFilename =~ /^flightplans.*txt$/i')"
 			},
 			{
 				"command": "extension.createFlightplanHeader",
@@ -84,6 +92,11 @@
 					"command": "extension.changeAircraftNumber",
 					"group": "FS AI Tools",
 					"when": "editorHasSelection && resourceFilename =~ /^((flightplans)|(aircraft)).*txt$/i"
+				},
+				{
+					"command": "extension.createAifpCfg",
+					"group": "FS AI Tools",
+					"when": "resourceFilename =~ /^flightplans.*txt$/i')"
 				},
 				{
 					"command": "extension.createFlightplanHeader",
@@ -252,5 +265,8 @@
 		"tslint": "^5.20.1",
 		"typescript": "^3.7.4",
 		"vscode": "^1.1.36"
+	},
+	"dependencies": {
+		"vsce": "^1.88.0"
 	}
 }
